1) Add Client & Account Repo, 2) ClientService, 3) RootController, 4) clients.jsp

--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
   </properties>
 
   <build>
-    <finalName>resource-mapping</finalName>
+    <finalName>Simple Bank</finalName>
     <defaultGoal>package</defaultGoal>
     <plugins>
       <plugin>
